<resources>
    <string name="app_name">NutriGado</string>
    <string name="logo">NutriGado - Inteligência para a Nutrição Animal</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="entrar">ENTRAR</string>
    <string name="cadastra">CADASTRAR</string>
    <string name="esquece">Esqueceu sua senha?</string>
    <string name="Telefone">Telefone</string>
    <string name="nome">Nome</string>
    <string name="confirma_senha">Confimar Senha</string>
    <string name="volta">VOLTAR</string>
    <string name="avanca">AVANÇAR</string>
    <string name="cadatros">CADASTROS</string>
    <string name="fazendas">FAZENDAS</string>
    <string name="Nome_fazenda">Nome da fazenda</string>
    <string name="Gerente">Gerente</string>
    <string name="Cidade">Cidade que está localizada</string>
    <string name="quantida">Quantidade de Animais</string>
    <string name="QuantidadeF">Quantidade de Funcionarios</string>
    <string name="animais">Animais</string>
    <string name="Pesquisar">Pesquisar Numero do Animal</string>
    <string name="rebanho">REBANHO</string>
    <string name="Cadastro_E_Atualiza">CADASTRO E ATUALIZAÇÕES</string>
    <string name="brinco">Numero Do Brinco</string>
    <string name="raça">Raça</string>
    <string name="sexo">Sexo</string>
    <string name="Data">Data de Nascimento</string>
    <string name="valor">Valor do Animal</string>
    <string name="macho">Macho</string>
    <string name="femia">Fêmea</string>
    <string name="peso">Peso ao Nascer - Kg</string>
    <string name="cobertura">Tipo de cobertura</string>
    <string name="natural">Monta natural</string>
    <string name="artificial">Inseminação artificial</string>
    <string name="Atualiza">Atualizar</string>
    <string name="deletar">Deletar</string>
    <string name="nome_fazenda">Nome da Fazenda</string>
    <string name="municipio">Municipio</string>
    <string name="CPFouCNPJ">Cpf ou Cnpj</string>
    <string name="Endereco">Endereço</string>
    <string name="IncEstaudal">Inscrição Estadual</string>
    <string name="Logout">Logout</string>
    <string name="NutricaoAnimal">Nutrição Animal</string>
    <string name="pesoAtual">Peso Atual</string>
    <string name="sobras">Sobras de Ração em Gramas</string>
    <string name="quantidadeAtual">Peso de Ração Colocada em Gramas</string>
    <string name="animaisDesmame">Animais Pronto Para o Desmame</string>
    <string-array name="racas">
        <item>Holandesa</item>
        <item>Jersey</item>
        <item>Gir</item>
        <item>Girolando</item>
        <item>Jersolando</item>
    </string-array>
</resources>
