<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Cadastro_Animais">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/cinza">
        <EditText
            android:id="@+id/edtNumBrinco"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/brinco"
            android:inputType="number"
            android:layout_marginTop="20dp"
            />
        <EditText
            android:id="@+id/edtNomeAnimais"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/nome"
            android:layout_marginTop="20dp"
            />
        <EditText
            android:id="@+id/edtRaca"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/raça"
            android:layout_marginTop="20dp"
            />
        <EditText
            android:id="@+id/edtDataNasc"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/Data"
            android:layout_marginTop="20dp"
            android:inputType="date"
            />
        <EditText
            android:id="@+id/edtValorAnimal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/valor"
            android:inputType="number"
            android:layout_marginTop="20dp"
            />
        <EditText
            android:id="@+id/edtPesoDoAnimal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/peso"
            android:inputType="number"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sexo"
            android:textSize="18dp"
            android:textColor="@color/preto"
            />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/macho"
                android:textSize="20dp"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/femia"
                android:textSize="20dp"/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cobertura"
            android:textSize="18dp"
            android:textColor="@color/preto"
            android:layout_marginTop="10dp"
            />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/natural"
                android:textSize="20dp"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artificial"
                android:textSize="20dp"/>
        </RadioGroup>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnVolta"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginRight="10dp"
            android:background="@color/vermelho"
            android:text="@string/volta"
            android:textColor="@color/branco"
            android:textSize="19dp" />

        <Button
            android:id="@+id/btnCadastra"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:background="@color/verde_escuro"
            android:text="@string/cadastra"
            android:textColor="@color/branco"
            android:textSize="19dp" />
    </LinearLayout>
</RelativeLayout>