<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CadastroFazendas">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/branco"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Nome_fazenda"
            android:textColor="@color/preto"
            android:textSize="17dp"
            />


        <EditText
            android:id="@+id/editNomeFazenda"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/municipio"
            android:textColor="@color/preto"
            android:textSize="17dp"
            />


        <EditText
            android:id="@+id/editMunicipio"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CPFouCNPJ"
            android:textSize="17dp"
            android:textColor="@color/preto"
            />


        <EditText
            android:id="@+id/editCPFouCNPJ"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/preto"
            android:textSize="17dp"
            android:text="@string/Endereco"
            />

        <EditText
            android:id="@+id/endereco"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/IncEstaudal"
            android:textSize="17dp"
            android:textColor="@color/preto"
            />

        <EditText
            android:id="@+id/inscricaoEstadual"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="17dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCadastra"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:background="@color/verde_escuro"
            android:text="@string/cadastra"
            android:textColor="@color/branco"
            android:textSize="19dp" />
    </LinearLayout>

</RelativeLayout>