<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.Login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:background="@color/colorPrimary">
        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:background="@drawable/icone_1"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logo"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="16dp"
            android:textColor="@color/branco"
            />

    </LinearLayout>

    <EditText
        android:id="@+id/edit_Email"
        android:layout_width="370dp"
        android:layout_gravity="center"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:textSize="18dp"
        android:background="@color/branco"/>

    <EditText
        android:id="@+id/editSenha"
        android:layout_width="370dp"
        android:layout_gravity="center"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:password="true"
        android:hint="@string/senha"
        android:textSize="18dp"
        android:background="@color/branco"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnEntra"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_marginRight="30dp"
            android:text="@string/entrar"
            android:textSize="16dp"
            android:textColor="@color/branco"
            android:background="@color/verde_escuro"
            />

        <Button
            android:id="@+id/btnCadastro"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:text="@string/cadastra"
            android:textSize="16dp"
            android:textColor="@color/branco"
            android:background="@color/azul_claro"


            />
    </LinearLayout>

</LinearLayout>